-
Bug
-
Resolution: Fixed
-
P1: Critical
-
6.4.2, 6.5.0 RC
-
None
-
-
94279afff (dev), a6b7bf825 (6.5)
Summary of the issue
windeployqt copy wrong mingw dll files, so execution of the .exe file within the deployment directory fails.
Steps to reproduce
- Create working directory and copy Qt 6.5 (or 6.4) application in the directry
- execute windeployqt --qmldir <path to the directory contains QML files for the app> <working directory>
- Go to the working directory and run the .exe file
Expected behavior
Application is launched without any problem
Actual behavior
Application launch fails with misconfiguration.
When I checked the files copied into the directory, I can see mingw files starting from lib*.dll are not the one we expect to have.
Timestamp and file sizes of lib*.dll files under the working directory
2019/03/14 22:36 76,288 libgcc_s_seh-1.dll
2019/03/14 22:36 1,424,384 libstdc++-6.dll
2019/03/14 22:36 52,224 libwinpthread-1.dll
Timestamp and file sizes of lib*.dll files under \Qt\6.5.0\mingw_64\bin directory
2021/11/16 21:42 75,264 libgcc_s_seh-1.dll
2021/11/16 21:43 1,957,376 libstdc++-6.dll
2021/11/16 21:43 53,248 libwinpthread-1.dll
I searched for where the files for working directory came from and I guess they are from C:\Strawberry\perl\bin.
For Gerrit Dashboard: QTBUG-112448 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
471455,4 | Windeployqt: change MinGW dll's import location | dev | qt/qtbase | Status: MERGED | +2 | 0 |
472663,2 | Windeployqt: change MinGW dll's import location | 6.5 | qt/qtbase | Status: MERGED | +2 | 0 |